<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        app:cardCornerRadius="50dp"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageView
            android:id="@+id/podImage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            tools:src="@drawable/ic_dark_blue_rc_bg"
            android:contentDescription="@string/pod_image"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/podTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageCard"
        android:layout_toEndOf="@+id/imageCard"
        android:ellipsize="end"
        android:paddingHorizontal="15dp"
        android:singleLine="true"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="@string/shooting_stars" />

    <TextView
        android:id="@+id/podDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageCard"
        android:layout_toEndOf="@+id/imageCard"
        android:ellipsize="end"
        android:paddingHorizontal="15dp"
        android:singleLine="true"
        android:textColor="@color/textColor"
        android:textSize="11sp"
        tools:text="@string/sample_date" />

</RelativeLayout>